--- a/html/2505.html
+++ b/html/2505.html
@@ -11,6 +11,15 @@
   <span id="anchor">20250519131049-日记</span>
   <pre>
 1
+25
+五月天晴雨半日交替, 变化迅速
+
+中岛美雪有首歌叫C.Q 
+C.Q.　C.Q.……　C.Q.　C.Q.…… 
+无线电中cq指广泛呼叫并等待回答
+我也要加入HAM
+
+
 18
 为了看山涧瀑布雨中爬山, 小径被灌木的长势埋没, 挂满了水珠, 只好用伞作盾甲向前推进, 裤管和鞋子早已湿透, 花脚蚊子在周身环绕但束口无策, 避蚊胺确实有效, 左手执伞, 右手拿长棍拍打前路, 驱蛇和探知深浅, 时不时空中搅动几下, 免得糊一脸的蛛网, 那种感觉令人相当不爽, 林间水雾弥漫, 随处点缀着玉叶金枝和桃金娘
 
