--- a/html/体况.html
+++ b/html/体况.html
@@ -7,7 +7,7 @@
   <script src="../js/content.js"></script>
   <title>体况</title>
 </head>
-<body><span id="anchor">20240307183503-户外</span>
+<body><span id="anchor">20250525172854-户外</span>
   <pre>
 行进
     能大步走就不小走。这样几十公里下来可以少万许多步。疲劳时应用放松的慢步来休息, 而不是停下来。 
@@ -42,6 +42,21 @@
     如果在寒冷地带，走路很多脚照样出汗，等你停下来时，潮湿的棉袜保暖性很差，会冻伤脚。 一般来说，羊毛袜子是比较好的选择。为什么不选棉的呢？主要原因是因为棉受潮以后干的很慢。
     户外的羊毛袜一般含80%左右的毛，还加有20%的尼龙增强伸缩性。这种混织的袜子比纯毛的袜子更结实耐用。羊毛的保暖性能出色，即使湿了以后，它仍有较好的保暖性。 
     
+失温
+    失温症的症状取决于温度，轻度失温可能造成发抖与意识模糊，中度失温时发抖症状消失，但意识模糊的状况则会加剧[3]。在重度失温的情况下，会有反常脱衣现象，患者会开始脱去衣物，这同时增加了心搏停止的风险。
+    人穿着湿衣服，而大脑、心脏等核心器官温度下降到一定程度，就会思维迟钝，皮肤有灼烧感，本能要脱掉衣服，而脸上带着微笑，称为死亡微笑
+    
+    第一期
+        体温降至比正常体温低1-2 °C（1.8-3.6 °F）。在这一阶段，人体会产生颤抖[10][11]，双手麻木，无法完成复杂动作。远端肢体血管收缩，以减少热量散失。呼吸快而浅。皮肤上出现“鸡皮疙瘩”，尝试使毛发竖立起来形成隔热层（人体由于毛发不足，这一反应作用有限，但是在其他物种中作用较大）。病人可能感觉疲劳和腹部疼痛。病人会有温暖的感觉，但事实上这是低体温症发展到第二期的信号。一种测试病情向第二期发展程度的方法是病人能否使拇指和小指接触[来源请求]，这是肌肉停止工作的第一阶段。病人可能会有视力困难。
+    第二期
+        体温降至比正常体温低2-4 °C（3.8-7.6 °F）。颤抖更猛烈。肌肉不协调更明显。[10][11][12]行动更迟缓、困难，伴有步伐跌跌撞撞、方向混乱，尽管病人可能保持警觉。浅层血管继续收缩，以保持重要器官的温度。病人面色苍白，唇、耳、手指和脚趾可能变蓝。
+    第三期
+        体温降至大约32 °C（89.6 °F）以下。颤抖通常已停止[10][11]。语言有困难，思维迟钝，记忆开始出现问题。通常手已经不能使用，行走经常跌倒。细胞新陈代谢停止。体温降至30 °C（86.0 °F）以下时，暴露的皮肤变蓝、涨大，肌肉协调能力几乎完全丧失，行走几乎不可能，语无伦次、行动毫无理性（包括可能尝试钻进洞里[13]），甚至昏迷。脉搏和呼吸显著减慢，但是可能发生心率过快（心室性心搏过速和心房纤维性颤动）。主要器官停止工作，宣告临床死亡。由于细胞活动降低，一段时间之后脑死亡才会发生。
+
+    多穿衣服、棉被为身体保温，但衣服，棉被并不能增加热量，只起到减少热量流失的作用。所以，遇到寒冷天气应当立刻穿上衣服，盖上棉被，否则如果到了第三周期后很难调节体温了。
+    同时在第一周期时，建议进行适当运动防止人体温度散失过快，做运动可以增加热量。但是如果人体温度持续下降应立刻停止运动并且向周边进行求助。
+    亦有一种“快速启动回温法”（Rapid Active Rewarming），即将伤者浸泡在不超过35°C的温水里，并且缓慢加热到40°C，持续10分钟。此法在纳粹德国进行的实验中被发现，是迄今最有效的治疗方法，西方国家也大量采用这个方法。
+
 热衰竭
     出现昏倒、皮肤湿冷、恶心等。出现后使其双脚抬高，头部稍放低，置于阴凉处。 
 
