--- a/html/少年天子.html
+++ b/html/少年天子.html
@@ -124,6 +124,12 @@
 
 
 你是吃小核桃吃多了, 你怀上小核桃了
+
+
+您身为举国之尊, 也必定是以众生的生死为生死
+
+
+他们是水缸底下的渣子, 有人拿棍子一搅, 就忙不迭地泛上来了, 他们早晚还得沉下去, 永远成不了气候
 </pre>
  </body>
 </html>
