--- a/html/方位.html
+++ b/html/方位.html
@@ -8,7 +8,7 @@
   <title>方位</title>
  </head>
  <body>
-  <span id="anchor">20250305232053-户外</span>
+  <span id="anchor">20250525223813-户外</span>
   <pre>
 不论是在林木遮蔽的山林中, 还是在丛草盖地的山坡上, 低头近看, 根本找不出路迹采, 只有远看, 看到几十米以外, 才能隐约地看出一条草枝微斜、草叶微倾、叶背微翻的痕迹
 
@@ -24,6 +24,29 @@
     山区河流通常水流湍急, 水温低, 河床坎坷不平。
     涉渡时, 为了保持身体平衡, 应当用一根午子支撑在水的上游方向, 或者手执重达15~20公斤石头。
     集体涉渡时, 可三人或四人一排, 彼此环抱肩部, 身体最强壮的位于上游方向。
+
+在中国大陆地区，即便你在 Garmin eTrex Solar 上设置的是 WGS 84 坐标系统，这是完全可以的，而且在应急求救时反而更标准、更清晰
+大多数专业救援、公安、消防、边防等机构都能识别 WGS 84。
+北斗、GPS、Google Earth、Garmin 设备等默认用的也是 WGS 84。
+中国法律规定公开地图必须使用加密坐标（如 GCJ-02，用于高德、腾讯地图），这导致：在手机地图上定位会偏差几十到几百米。
+但 Garmin 设备采集的 WGS 84 坐标是原始的真实位置，用于求救更精确。
+救援部门通常具备将 WGS 84 坐标正确投影到其内部地图的能力。
+“我在山中被困，用的是 Garmin GPS，定位坐标为：北纬39.12345度，东经117.12345度，坐标格式是 WGS 84，请派人救援。”
+如果对方问你“是不是高德地图定位坐标”，你可以说明：
+> “不是，这是GPS设备提供的国际标准 WGS 84 坐标，更准确，适合直接定位。”
+
+当你的手机能接收到任意一家运营商的信号，即使不是你自己的运营商，也有可能打通 110
+有些偏远地区，你手机会显示“无服务”，但切换到其他运营商（如移动/联通/电信）仍可能有弱信号, 如果能显示任何运营商信号，就立即拨打 110
+
+Garmin 官方明确表示，inReach 系列在中国大陆可以使用 SOS 紧急服务，但：
+必须开通有效的 inReach 卫星服务订阅计划
+使用前应在 Garmin Explore 网站上正确填写你的：
+紧急联系人
+母语（中文）
+常驻国家（中国）
+SOS按钮发送的求救信号是系统自动生成的标准格式消息，不能用自定义短信替代。不过它包含了精准坐标和紧急联系人信息，足够救援用。
+
+中国电信移动电话直通卫星业务需要具备“天通”卫星通话功能的手机和中国电信手机卡，开通此服务参考收费10元一个月，包含两分钟的卫星通话，国内的拨打，接听，都是9元一分钟(紧急号不计)，发短讯5元一次。
 
 <h1>GPS</h1>
 <h2>经纬度直投</h2>
