--- a/html/观阅记录.html
+++ b/html/观阅记录.html
@@ -132,7 +132,7 @@
 </head>
 
 <body>
-  <span id="anchor">20250507224736-碎片</span>
+  <span id="anchor">20250525164704-碎片</span>
   <div class="accordion">
     <input type="radio" name="select" class="accordion-select" checked>
     <div class="accordion-title">
@@ -141,6 +141,10 @@
     <div class="accordion-content">
       <table>
         <tbody>
+          <tr>
+            <td>少年天子</td>
+            <td>2003</td>
+          </tr>
           <tr>
             <td>长河东流</td>
             <td>2008</td>
@@ -366,6 +370,10 @@
     <div class="accordion-content">
       <table>
         <tbody>
+          <tr>
+            <td>双龙会</td>
+            <td>1992</td>
+          </tr>
           <tr>
             <td>诺斯费拉图 Nosferatu</td>
             <td>1922</td>
