--- a/src/side.html
+++ b/src/side.html
@@ -20,6 +20,7 @@
    <li><a href="https://translate.google.com/?sl=zh-CN&amp;tl=en" target="_blank">Google Translate</a></li>
    <li><a href="https://chatgpt.com/?oai-dm=1" target="_blank">ChatGPT</a></li>
    <li><a href="https://temp-mail.org/en/10minutemail" target="_blank">10 Minute Mail</a></li>
+   <li><a href="https://orikamushi.netlify.app/miyuki_zone/album/miyuki_album19.html" target="_blank">織歌蟲//中島美雪歌詞專區～ALBUM 19. 歌でしか言えない～</a></li>
    <li><a href="https://github.com/futarinoida/futarinoida.github.io#about" target="_blank">模板自述</a></li>
    <li><a href="https://github.com/futarinoida/futarinoida.github.io/commits/master/" target="_blank">历史提交</a></li>
   </ul>
@@ -28,11 +29,12 @@
     <li><a href="../html/自动重合闸.html" data-stamp="20250301223339" target="content">自动重合闸</a></li>
    </ul><span class="category inactive" onclick="toggle('户外_html')">户外</span>
    <ul id="户外_html" class="hidden">
+    <li><a href="../html/无线电.html" data-stamp="20250525224600" target="content">无线电</a></li>
+    <li><a href="../html/方位.html" data-stamp="20250525223813" target="content">方位</a></li>
+    <li><a href="../html/体况.html" data-stamp="20250525172854" target="content">体况</a></li>
     <li><a href="../html/准备.html" data-stamp="20250505105224" target="content">准备</a></li>
-    <li><a href="../html/方位.html" data-stamp="20250305232053" target="content">方位</a></li>
     <li><a href="../html/食物.html" data-stamp="20250301184622" target="content">食物</a></li>
     <li><a href="../html/动物伤害.html" data-stamp="20240510103255" target="content">动物伤害</a></li>
-    <li><a href="../html/体况.html" data-stamp="20240307183503" target="content">体况</a></li>
     <li><a href="../html/水源.html" data-stamp="20240307183503" target="content">水源</a></li>
     <li><a href="../html/火种.html" data-stamp="20240307183503" target="content">火种</a></li>
     <li><a href="../html/营地.html" data-stamp="20240307183503" target="content">营地</a></li>
@@ -66,7 +68,7 @@
     <li><a href="../html/The History of Tom Jones, A Foundling.html" data-stamp="20240307183503" target="content">The History of Tom Jones, A Foundling</a></li>
    </ul><span class="category inactive" onclick="toggle('碎片_html')">碎片</span>
    <ul id="碎片_html" class="hidden">
-    <li><a href="../html/观阅记录.html" data-stamp="20250507224736" target="content">观阅记录</a></li>
+    <li><a href="../html/观阅记录.html" data-stamp="20250525164704" target="content">观阅记录</a></li>
     <li><a href="../html/碎片4.html" data-stamp="20250501094747" target="content">碎片4</a></li>
     <li><a href="../html/碎片3.html" data-stamp="20250419104243" target="content">碎片3</a></li>
     <li><a href="../html/碎片2.html" data-stamp="20250201104649" target="content">碎片2</a></li>
@@ -77,8 +79,8 @@
     <li><a href="../html/民谚.html" data-stamp="20240307183503" target="content">民谚</a></li>
    </ul><span class="category inactive" onclick="toggle('影摘_html')">影摘</span>
    <ul id="影摘_html" class="hidden">
+    <li><a href="../html/海绵宝宝.html" data-stamp="20250525224255" target="content">海绵宝宝</a></li>
     <li><a href="../html/少年天子.html" data-stamp="20250510212717" target="content">少年天子</a></li>
-    <li><a href="../html/海绵宝宝.html" data-stamp="20250507224922" target="content">海绵宝宝</a></li>
     <li><a href="../html/长河东流.html" data-stamp="20250505120324" target="content">长河东流</a></li>
     <li><a href="../html/鹿鼎记.html" data-stamp="20250324210237" target="content">鹿鼎记</a></li>
     <li><a href="../html/南宋传奇之蟋蟀宰相.html" data-stamp="20250319201757" target="content">南宋传奇之蟋蟀宰相</a></li>
@@ -237,8 +239,16 @@
     <li><a data-path="../gallery/动物/GWHMsDrWUAAIRkO.jpg">GWHMsDrWUAAIRkO.jpg</a></li>
    </ul><span class="category inactive" onclick="toggle('id_9')">地理人文</span>
    <ul id="id_9" class="hidden">
+    <li><a data-path="../gallery/地理人文/20250525224248.webp">20250525224248.webp</a></li>
+    <li><a data-path="../gallery/地理人文/235b9e07dab6420b98a68d85f3df8eb6.webp">235b9e07dab6420b98a68d85f3df8eb6.webp</a></li>
     <li><a data-path="../gallery/地理人文/24_127451_439649a79391e69.gif">24_127451_439649a79391e69.gif</a></li>
+    <li><a data-path="../gallery/地理人文/3b2e25b011fb491293ca62422f8277c7.webp">3b2e25b011fb491293ca62422f8277c7.webp</a></li>
+    <li><a data-path="../gallery/地理人文/44e07a4b7cf0467797e0914d0f3631f1.webp">44e07a4b7cf0467797e0914d0f3631f1.webp</a></li>
+    <li><a data-path="../gallery/地理人文/975288ef072e48289a3421f25bf2e0de.webp">975288ef072e48289a3421f25bf2e0de.webp</a></li>
+    <li><a data-path="../gallery/地理人文/99296550894b4cbba5bf6af94b1e6d78.webp">99296550894b4cbba5bf6af94b1e6d78.webp</a></li>
     <li><a data-path="../gallery/地理人文/A few seconds before happiness.jpg">A few seconds before happiness.jpg</a></li>
+    <li><a data-path="../gallery/地理人文/ed279aaeb7b04be2802f5cae8a5711ba.webp">ed279aaeb7b04be2802f5cae8a5711ba.webp</a></li>
+    <li><a data-path="../gallery/地理人文/f8dcdf27c740402198b74daec0d82ea4.webp">f8dcdf27c740402198b74daec0d82ea4.webp</a></li>
     <li><a data-path="../gallery/地理人文/GHgCBMoWoAAX6NZ.jpg">GHgCBMoWoAAX6NZ.jpg</a></li>
     <li><a data-path="../gallery/地理人文/GI-KMmLWYAAl3Q2.jpg">GI-KMmLWYAAl3Q2.jpg</a></li>
     <li><a data-path="../gallery/地理人文/GI3Hhb9W0AAG-6t.jpg">GI3Hhb9W0AAG-6t.jpg</a></li>
@@ -267,6 +277,7 @@
     <li><a data-path="../gallery/地理人文/山海关4.webp">山海关4.webp</a></li>
     <li><a data-path="../gallery/地理人文/弗里德里希·迪伦马特，以笔为矛的批评家.webp">弗里德里希·迪伦马特，以笔为矛的批评家.webp</a></li>
     <li><a data-path="../gallery/地理人文/朝代年表.png">朝代年表.png</a></li>
+    <li><a data-path="../gallery/地理人文/箭扣野长城.jpg">箭扣野长城.jpg</a></li>
    </ul><span class="category inactive" onclick="toggle('id_10')">小诗</span>
    <ul id="id_10" class="hidden">
     <li><a data-path="../gallery/小诗/post-705080-65cdf1c39f15b.png">post-705080-65cdf1c39f15b.png</a></li>
