--- a/html/2505.html
+++ b/html/2505.html
@@ -11,6 +11,11 @@
   <span id="anchor">20250519131049-日记</span>
   <pre>
 1
+27
+翻看了业余无线电的典型书籍, 结论是规则约束太多, 作为应急通讯, 还是卫星电话来的直接
+一部支持卫星双向通话的功能备用机(二手努比亚 Z60S Pro), 装电信无忧卡, 开卫星直连服务, 满电关机, 涉险无基站信号时开启
+
+
 25
 五月天晴雨半日交替, 变化迅速
 
