--- a/src/side.html
+++ b/src/side.html
@@ -29,7 +29,6 @@
     <li><a href="../html/自动重合闸.html" data-stamp="20250301223339" target="content">自动重合闸</a></li>
    </ul><span class="category inactive" onclick="toggle('户外_html')">户外</span>
    <ul id="户外_html" class="hidden">
-    <li><a href="../html/无线电.html" data-stamp="20250525224600" target="content">无线电</a></li>
     <li><a href="../html/方位.html" data-stamp="20250525223813" target="content">方位</a></li>
     <li><a href="../html/体况.html" data-stamp="20250525172854" target="content">体况</a></li>
     <li><a href="../html/准备.html" data-stamp="20250505105224" target="content">准备</a></li>
@@ -68,7 +67,7 @@
     <li><a href="../html/The History of Tom Jones, A Foundling.html" data-stamp="20240307183503" target="content">The History of Tom Jones, A Foundling</a></li>
    </ul><span class="category inactive" onclick="toggle('碎片_html')">碎片</span>
    <ul id="碎片_html" class="hidden">
-    <li><a href="../html/观阅记录.html" data-stamp="20250525164704" target="content">观阅记录</a></li>
+    <li><a href="../html/观阅记录.html" data-stamp="20250528234958" target="content">观阅记录</a></li>
     <li><a href="../html/碎片4.html" data-stamp="20250501094747" target="content">碎片4</a></li>
     <li><a href="../html/碎片3.html" data-stamp="20250419104243" target="content">碎片3</a></li>
     <li><a href="../html/碎片2.html" data-stamp="20250201104649" target="content">碎片2</a></li>
@@ -79,7 +78,8 @@
     <li><a href="../html/民谚.html" data-stamp="20240307183503" target="content">民谚</a></li>
    </ul><span class="category inactive" onclick="toggle('影摘_html')">影摘</span>
    <ul id="影摘_html" class="hidden">
-    <li><a href="../html/海绵宝宝.html" data-stamp="20250525224255" target="content">海绵宝宝</a></li>
+    <li><a href="../html/黑客帝国系列.html" data-stamp="20250528235145" target="content">黑客帝国系列</a></li>
+    <li><a href="../html/海绵宝宝.html" data-stamp="20250528203344" target="content">海绵宝宝</a></li>
     <li><a href="../html/少年天子.html" data-stamp="20250510212717" target="content">少年天子</a></li>
     <li><a href="../html/长河东流.html" data-stamp="20250505120324" target="content">长河东流</a></li>
     <li><a href="../html/鹿鼎记.html" data-stamp="20250324210237" target="content">鹿鼎记</a></li>
