--- a/html/观阅记录.html
+++ b/html/观阅记录.html
@@ -132,7 +132,7 @@
 </head>
 
 <body>
-  <span id="anchor">20250525164704-碎片</span>
+  <span id="anchor">20250528234958-碎片</span>
   <div class="accordion">
     <input type="radio" name="select" class="accordion-select" checked>
     <div class="accordion-title">
@@ -370,6 +370,10 @@
     <div class="accordion-content">
       <table>
         <tbody>
+          <tr>
+            <td>黑客帝国</td>
+            <td>1999</td>
+          </tr>
           <tr>
             <td>双龙会</td>
             <td>1992</td>
