--- a/html/2505.html
+++ b/html/2505.html
@@ -10,7 +10,16 @@
  <body>
   <span id="anchor">20250519131049-日记</span>
   <pre>
-1
+31
+拒收了网购的电信卡, 因为电信跟快递公司协议必须由快递员来激活号码, 否则不能完成签收, 无法忍受像犯人一样站在街头举着身份证给对方质押拍照激活, 打电话让电信改自助激活, 无果, 因此放弃电信卫星, 一并的努比亚也取消不买了
+
+海事的卫星电话终端isatPhone2, 在国内电商中除了价格翻一倍, 对应的卫星国际卡(预付费卡), 居然还被冠以卡费, 入网开通费, 这些在套餐之外的子虚乌有费, 我真的惊讶于这种倒卖, 自己直接在美亚商城买终端买国际卡, 物流两星期, 同样的东西费用差距5千
+
+
+30
+每次走进电梯, 对时间的感知粒度就会被放大数倍, 所有静止的东西看上去都如同扣在弦上的箭, 变动的数字是挥刀驰骋的敌骑, 忽然门缝开启, 双方又老友般握手言和了
+
+
 27
 翻看了业余无线电的典型书籍, 结论是规则约束太多, 作为应急通讯, 还是卫星电话来的直接
 一部支持卫星双向通话的功能备用机(二手努比亚 Z60S Pro), 装电信无忧卡, 开卫星直连服务, 满电关机, 涉险无基站信号时开启
