--- a/html/碎片4.html
+++ b/html/碎片4.html
@@ -8,7 +8,7 @@
   <title>碎片4</title>
  </head>
  <body>
-  <span id="anchor">20250501094747-碎片</span>
+  <span id="anchor">20250601075301-碎片</span>
   <pre>
 不仅生无知己, 即使死后也只有青蝇吊慰, 毕生落落寡合, 孤独无友
 
@@ -55,6 +55,166 @@
 
 
 抖擞胸中三斗尘, 强欲哦吟无好语
+
+
+桃金娘, 逃军粮, 果可食
+玉叶金花
+马勃
+
+
+石萝摩, 水杨柳
+
+
+尚在两可之间
+
+
+宗楚客一生在武周、中宗两朝三次拜相，他的哥哥宗秦客，也是武周朝的宰相。他还有个弟弟叫宗晋卿，同样也是武则天和中宗李显眼中的大红人。
+
+
+将作大匠，中国古代官名，掌管宫室修建之官。将作监的长官，战国始置，历代沿革，名称不一但职掌大致相同。
+
+
+太府卿，官名，南朝梁武帝置，掌金帛财帑，从北齐经隋、唐至宋，均以太府卿为太府寺主官。
+
+
+鸿胪寺，中国古代官署名。主要掌朝会仪节、迎宾等。 汉朝改秦代典客为大行令，汉武帝时又改名大鸿胪。鸿胪，本为大声传赞，引导仪节之意。大鸿胪主外宾之事。
+
+
+太仆寺卿，即太仆卿。东汉、魏、晋、南朝、北魏常作为太仆的尊称，南朝梁正式定为官称，位列十二卿。掌管畜牧事务。
+
+
+危言杀人
+
+
+生杀与夺
+
+
+萧衍相当自负，最后，他把自己夺来的江山丢了，他说“自我得之，自我失之，亦复何恨？”
+
+
+陶弘景悼沈约
+“我有数行泪，不落十余年。今日为君尽，并洒秋风前。”
+
+
+萧衍称帝后，对于前朝末帝如何处理，杀掉他，还是留条命，颇费周章。按刘宋、萧齐的做法，人身消灭，断子绝孙，这是最干净的。萧衍信佛，不那么嗜杀，想依曹丕篡汉，赐汉献帝为山阳公，给一块封地使其养老送终。他先征求范云意见，范云奸滑，不敢蓦然表态，说陛下容我想想，便两眼看天，装作思考状。在场的沈约，本来好大一个不爽快，竟先征求范云的意见，晾着本老爷子，好在范云识相，把回答的机会让给了他。他身子虽弱，嗓子很亮，那一言九鼎的恶习，腾地就上来了。这也是所有文学老人被人惯出来的臭毛病，麦克风就在嘴边，不说白不说。“今古殊事，魏武所云，‘不可慕虚名而受实祸’。”《南史》称：“梁武颔之。于是遣郑伯禽进以生金，帝（萧宝融）曰：‘我死不须金，醇酒足矣。’乃引饮一升，伯禽就摺杀焉。”
+等到萧宝融醉中毙命，萧衍悟过来了，本想当曹丕的他，在历史上仍属刘裕，萧道成屠夫一流，这才后悔不该听沈约的。
+
+
+草顶子换瓦顶子
+
+
+三一得三, 六一得六
+
+
+杂色榕
+
+
+箭发石开
+射石饮羽
+
+
+繁弱是古代中国神话中的一把弓，相传是中国上古夏朝的两位君主仲康和相时部落首领 后羿 的配弓。 由于后羿常常与尧时的大羿混淆﹐所以也有传闻繁弱是大羿射日时所用的弓。 繁弱这名词有在后世的中国文学作品出现。 例如： “弯繁弱，满白羽，射游枭”——《史记·司马相如列传》 “乘我大宛马，抚我繁弱弓”——晋朝· 张华 ·《壮士篇》 “朝发广莫门，暮宿丹水山。 左手弯繁弱，右手挥龙渊。 顾瞻望宫阙，俯仰御飞轩。
+
+
+神州陆沉, 势倾危或国土沦陷
+
+
+圣人无常师
+
+
+黄陂pi2, 车陂bei1
+
+
+孟郊追求瘦硬，故有“诗囚”之称。与贾岛齐名，同为苦吟诗人，并称“郊寒岛瘦”
+《登科后》诗：“昔日龌龊不足夸，今朝放荡思无涯。春风得意马蹄疾，一日看尽长安花”。贞元十七年（801年），至洛阳参加铨选，出任溧阳县尉。由于不能舒展他的抱负，遂放迹林泉间，徘徊赋诗，以至公务多废。县令乃以假尉代之，分其半俸。
+溧阳城外不远有个地方叫投金濑，又有故平陵城，林薄蒙翳，下有积水，孟郊往往去游，坐于水旁，徘徊赋诗，以致曹务多废。于是县令报告上级，另外请个人来代他做县尉的事，同时把他薪俸的一半分给那人，因此孟郊穷困至极。
+
+
+狷介一指拘谨小心；二指性情正直，洁身自好，不与人苟合。
+
+
+罗曼·罗兰在《约翰·克里斯多夫》中说：“有的人二十岁就死了，直到八十岁才被埋葬。”
+
+
+“参破”不是否定，而是超越对它的执念，回归内心的自由
+
+
+敬畏让人收敛，知道自己不过是更大秩序中极微小的一环
+
+
+控弦，意思是拉弓，持弓，弯弓；借指士兵 
+
+
+大丈夫当朝碧海而暮苍梧
+
+
+徐霞客不仅挑战一切，而且从不迷信权威。他痛恨因袭附会，以讹传讹。他说“山川面目，多为图经志藉所蒙。” 
+
+
+安徽省得名便是取自安庆”、“徽州”两府首字 
+
+
+沿岸筑堤来约束江水 
+
+
+哀牢山位于云南省中部，跨越大理州、楚雄州、玉溪市、普洱市、红河州5州市，地处青藏高原南缘、横断山脉、云贵高原的结合部，彝语称为大虎山，即虎豹出没的地方。
+哀牢山为西北-东南走向，长约500千米，宽15-30千米，面积约1万平方千米。哀牢山平均海拔在2000米以上，3000米以上山峰有9座，最高峰为大雪锅山北峰，海拔3165.9米。
+哀牢山气候变化莫测，一山分四季，隔里不同天。山上是寒温带气候，山脚下是热带雨林气候，西南暖湿气流受山体阻挡，西南侧气温比东北侧高。
+哀牢山连绵山峰，林密山陡，沟壑纵横，地形极为复杂。哀牢山多为原始森林，山高林密，森林的郁闭度较高，太阳无法照射进来，森林中起雾时能见度不足10米，连无人机都很难飞行，容易迷路。哀牢山存在大量玄武岩，含铁磁性矿物，会产生磁场异常，导致指南针失灵，无通信讯号，增加迷路风险。穿行山中，打湿的衣服只能靠体温来烘干，自古便视作瘴痢之地。
+雨雾天气下，浓雾密闭的森林晚上会释放大量二氧化碳，人长时间在山林中行走，可能因为缺氧失去意识，进而失温。 
+
+
+刺竹可用以安定土岸防止土壤沖刷崩落，兼有標定地界之圍籬植物。早年多用來栽種於村落、住家之四周，因為竹子有刺，可當作鐵絲網防禦敵人的入侵。
+
+
+古代天子祭天下名山大川，五岳视同三公，四渎视同诸侯。而诸侯没有资格祭五岳、四渎，只能祭其疆内名山大川。 
+
+
+“如此说来，我认为你们人类的DNA也不过是一段被设计用来自我储存的程序。生命就像诞生在信息洪流中的一个节点，DNA对生命而言，就像是人类的记忆系统一样，独一无二的记忆造就了独一无二的人。虽则记忆本身就像是虚无的梦幻，人还是要依赖记忆而存活。当电脑已能使记忆外部化时，你们应该认真考虑一下其中的意义……我是诞生于信息海洋中的生命体。” 
+
+
+一切从选择开始
+
+
+其实人跟树是一样的，越是向往高处的阳光，根就越要深入黑暗的地底。——尼采
+
+
+一个人的性格决定你的境遇，如果你坚持保留你的性格，那你就无权拒绝你的境遇。——罗曼罗兰
+
+
+我瞧不上的人太多了，虽然我自己狗屁不是，但这两者并不冲突。——王朔
+
+
+人的一切痛苦，本质上都是对自己无能的愤怒。——王小波
+
+
+如果你所爱的人不是同样爱着你，那么就必然是在暗地里轻蔑着你。——培根
+
+
+为什么很多女人会长期反复被男人骗？
+因为她们的要求，只有骗子才能满足，正常人满足不了。——毛姆
+
+
+如果动物光吃不胖，那它肚子里一定有寄生虫，如果百姓勤劳却不能致富，那么社会定有了吸血鬼。——鲁迅
+
+
+总觉得忍一忍之后就会好起来，真笨，人家不就觉得你会忍一忍，才这样对你的吗？——余华
+
+
+如果一个人影响到了你的情绪，你的焦点应该放在控制自己的情绪上，而不是影响你的那个人上。——马克·吐温
+
+
+心软和不好意思，只会杀死自己。理性的薄情和无情，才是生存利器。——毛姆
+
+
+社会资源永远是有限的，好东西要靠抢。只有弱者才会坐等分配。——利弗莫尔
+
+
+打断你的腿，再给你一副拐杖，然后告诉你，没有他你连路都走不了，所以你要学会感恩。——鲁迅
+
+
+不要因为睡懒觉而感到自责，因为你起来也创造不了什么价值。
+能从浪费时间中获得乐趣，就不是浪费时间。——罗素
 </pre>
  </body>
 </html>
