--- a/src/side.html
+++ b/src/side.html
@@ -67,8 +67,8 @@
     <li><a href="../html/The History of Tom Jones, A Foundling.html" data-stamp="20240307183503" target="content">The History of Tom Jones, A Foundling</a></li>
    </ul><span class="category inactive" onclick="toggle('碎片_html')">碎片</span>
    <ul id="碎片_html" class="hidden">
+    <li><a href="../html/碎片4.html" data-stamp="20250601075301" target="content">碎片4</a></li>
     <li><a href="../html/观阅记录.html" data-stamp="20250528234958" target="content">观阅记录</a></li>
-    <li><a href="../html/碎片4.html" data-stamp="20250501094747" target="content">碎片4</a></li>
     <li><a href="../html/碎片3.html" data-stamp="20250419104243" target="content">碎片3</a></li>
     <li><a href="../html/碎片2.html" data-stamp="20250201104649" target="content">碎片2</a></li>
     <li><a href="../html/成人笑话.html" data-stamp="20240424214437" target="content">成人笑话</a></li>
@@ -206,7 +206,21 @@
     <li><a data-path="../gallery/funny/阿拔斯末代国王哈里发.webp">阿拔斯末代国王哈里发.webp</a></li>
    </ul><span class="category inactive" onclick="toggle('id_7')">tip</span>
    <ul id="id_7" class="hidden">
+    <li><a data-path="../gallery/tip/13735064_201505312248270661.webp">13735064_201505312248270661.webp</a></li>
+    <li><a data-path="../gallery/tip/1_170908111639_7.jpg">1_170908111639_7.jpg</a></li>
+    <li><a data-path="../gallery/tip/296482847_10_2025041310065026_wm.webp">296482847_10_2025041310065026_wm.webp</a></li>
+    <li><a data-path="../gallery/tip/296482847_15_20250413100651417_wm.webp">296482847_15_20250413100651417_wm.webp</a></li>
+    <li><a data-path="../gallery/tip/296482847_16_20250413100651652_wm.webp">296482847_16_20250413100651652_wm.webp</a></li>
+    <li><a data-path="../gallery/tip/296482847_19_20250413100652448_wm.webp">296482847_19_20250413100652448_wm.webp</a></li>
+    <li><a data-path="../gallery/tip/296482847_21_2025041310065326_wm.webp">296482847_21_2025041310065326_wm.webp</a></li>
+    <li><a data-path="../gallery/tip/296482847_25_20250413100654120_wm.webp">296482847_25_20250413100654120_wm.webp</a></li>
+    <li><a data-path="../gallery/tip/296482847_26_20250413100654480_wm.webp">296482847_26_20250413100654480_wm.webp</a></li>
+    <li><a data-path="../gallery/tip/296482847_28_2025041310065511_wm.webp">296482847_28_2025041310065511_wm.webp</a></li>
+    <li><a data-path="../gallery/tip/296482847_29_20250413100655355_wm.webp">296482847_29_20250413100655355_wm.webp</a></li>
+    <li><a data-path="../gallery/tip/296482847_30_20250413100655636_wm.webp">296482847_30_20250413100655636_wm.webp</a></li>
+    <li><a data-path="../gallery/tip/296482847_31_20250413100655870_wm.webp">296482847_31_20250413100655870_wm.webp</a></li>
     <li><a data-path="../gallery/tip/732025-下午-71806.png">732025-下午-71806.png</a></li>
+    <li><a data-path="../gallery/tip/each-of-the-6-people-can-have-their-own-individual-lock-and-v0-ms4scz8y894f1.webp">each-of-the-6-people-can-have-their-own-individual-lock-and-v0-ms4scz8y894f1.webp</a></li>
     <li><a data-path="../gallery/tip/F5Ov-82bYAAKsVx.jpg">F5Ov-82bYAAKsVx.jpg</a></li>
     <li><a data-path="../gallery/tip/GFgh9NYW0AAYjFE.jpg">GFgh9NYW0AAYjFE.jpg</a></li>
     <li><a data-path="../gallery/tip/GHF67imWkAEEiXP.jpg">GHF67imWkAEEiXP.jpg</a></li>
@@ -270,6 +284,7 @@
     <li><a data-path="../gallery/地理人文/GVCp525WkAAQKBU.jpg">GVCp525WkAAQKBU.jpg</a></li>
     <li><a data-path="../gallery/地理人文/GVSqrskaoAAGjbl.jpg">GVSqrskaoAAGjbl.jpg</a></li>
     <li><a data-path="../gallery/地理人文/Lomanstraat Street decorated with symmetrical trees in Amsterdam.jpg">Lomanstraat Street decorated with symmetrical trees in Amsterdam.jpg</a></li>
+    <li><a data-path="../gallery/地理人文/v2-1ef6714e3309cedcfe2d8912f16d3711_720w.webp">v2-1ef6714e3309cedcfe2d8912f16d3711_720w.webp</a></li>
     <li><a data-path="../gallery/地理人文/乡村市集通名.webp">乡村市集通名.webp</a></li>
     <li><a data-path="../gallery/地理人文/山海关.webp">山海关.webp</a></li>
     <li><a data-path="../gallery/地理人文/山海关2.webp">山海关2.webp</a></li>
@@ -511,6 +526,7 @@
     <li><a data-path="../gallery/讽刺/元宵除夕.jpg">元宵除夕.jpg</a></li>
     <li><a data-path="../gallery/讽刺/哪怕是最低限度的一个表达，也会形成一种力量。.jpg">哪怕是最低限度的一个表达，也会形成一种力量。.jpg</a></li>
     <li><a data-path="../gallery/讽刺/如何反驳“你又不做坏事，把隐私交给国家有何不可？”.jpg">如何反驳“你又不做坏事，把隐私交给国家有何不可？”.jpg</a></li>
+    <li><a data-path="../gallery/讽刺/我也是.jpeg">我也是.jpeg</a></li>
     <li><a data-path="../gallery/讽刺/投资者不要以盈利为唯一目的.jpg">投资者不要以盈利为唯一目的.jpg</a></li>
     <li><a data-path="../gallery/讽刺/新闻与宣传的区别！.jpg">新闻与宣传的区别！.jpg</a></li>
     <li><a data-path="../gallery/讽刺/维稳.jpg">维稳.jpg</a></li>
@@ -834,6 +850,9 @@
     <li><a data-path="../video/funny/Jackpot.mp4">Jackpot.mp4</a></li>
     <li><a data-path="../video/funny/Legend Benny Hill  .mp4">Legend Benny Hill .mp4</a></li>
     <li><a data-path="../video/funny/Looking Back At This, These Was A Wild Time .mp4">Looking Back At This, These Was A Wild Time .mp4</a></li>
+    <li><a data-path="../video/funny/m2-res_472p.mp4">m2-res_472p.mp4</a></li>
+    <li><a data-path="../video/funny/m2-res_640p (1).mp4">m2-res_640p (1).mp4</a></li>
+    <li><a data-path="../video/funny/m2-res_640p.mp4">m2-res_640p.mp4</a></li>
     <li><a data-path="../video/funny/Marine biologist..mp4">Marine biologist..mp4</a></li>
     <li><a data-path="../video/funny/marry or not.mp4">marry or not.mp4</a></li>
     <li><a data-path="../video/funny/Me driving out from MM2. .mp4">Me driving out from MM2. .mp4</a></li>
@@ -897,6 +916,8 @@
     <li><a data-path="../video/idea/lighter.mp4">lighter.mp4</a></li>
     <li><a data-path="../video/idea/Love this cool storage! .mp4">Love this cool storage! .mp4</a></li>
     <li><a data-path="../video/idea/Love this..mp4">Love this..mp4</a></li>
+    <li><a data-path="../video/idea/m2-res_392p.mp4">m2-res_392p.mp4</a></li>
+    <li><a data-path="../video/idea/m2-res_640p.mp4">m2-res_640p.mp4</a></li>
     <li><a data-path="../video/idea/Making a miter joint A miter joint is a type of jo.mp4">Making a miter joint A miter joint is a type of jo.mp4</a></li>
     <li><a data-path="../video/idea/Making a secret door.mp4">Making a secret door.mp4</a></li>
     <li><a data-path="../video/idea/Next level laziness! .mp4">Next level laziness! .mp4</a></li>
