--- a/html/准备.html
+++ b/html/准备.html
@@ -15,16 +15,13 @@
 
 体验
     盐晶制取
-    钓鱼烤鱼 (预备中)
+    捕鱼烤鱼
         防溺水手环
-        3.6m4节收缩竿 (禧玛诺)
-        七星漂线组
-        罗非铒粒
         折叠锯 (干湿木段)
         挖洞小铲 (地面联通双洞)
         特大垃圾袋 (洞口鼓风)
         自封盐袋 (增味)
-        纸巾 (引火)
+        纸巾 (初期引火)
     陶器烧制
     陷阱布置
     木屋搭建
