--- a/html/海绵宝宝.html
+++ b/html/海绵宝宝.html
@@ -8,7 +8,7 @@
   <title>海绵宝宝</title>
 </head>
 
-<body><span id="anchor">20250528203344-影摘</span>
+<body><span id="anchor">20250602064940-影摘</span>
   <pre>
 20220926035016.webp
 
@@ -52,6 +52,7 @@ you deadbeats
 20250426182014.webp
 20250426182015.webp
 20250426182016.webp
+20250602064927.webp
 20250426182017.webp
 20250426182018.webp
 
