--- a/html/准备.html
+++ b/html/准备.html
@@ -7,7 +7,7 @@
   <script src="../js/content.js"></script>
   <title>准备</title>
 </head>
-<body><span id="anchor">20250505105224-户外</span>
+<body><span id="anchor">20250607143835-户外</span>
   <pre>
 对于户外装备有关的新技术，都需要花时间来学习如何最好地使用它
 提前同步好相关路线和航点, 出发点手动开始记录, 然后路线导航或航点导航, 回到出发点结束记录
@@ -17,11 +17,12 @@
     盐晶制取
     捕鱼烤鱼
         防溺水手环
-        折叠锯 (干湿木段)
-        挖洞小铲 (地面联通双洞)
-        特大垃圾袋 (洞口鼓风)
+        10进网笼, 饵料
         自封盐袋 (增味)
+        折叠锯 (干湿木段)
+        洛阳铲 (地面联通双洞)
         纸巾 (初期引火)
+        打气袋 (洞口鼓风, natruehike)
     陶器烧制
     陷阱布置
     木屋搭建
@@ -31,18 +32,19 @@
 手机 (超级省电模式)
 手持GPS (garmin etrex solar)
 卫星电话 (isatPhone 2)
-瓶装水 (1.5L, 溶入2g盐, 10g糖)
+瓶装水 (1.5L, 溶入2g盐, 10g糖), 挂扣
 压缩饼
 直饮器 (sawyer mini)
 医疗包
 小刀 (m390粉末钢)
 哨子
-火石
+镁棒
 手电 (fenix c5)
 望远镜 (celestron 单筒10x24)
 避蚊胺 (jiadebao 10%deet)
 护袖
 湿巾
+绳 (8mm,10m)
 ----------------------------------------------
 
 <h1>医疗包</h1>
