--- a/html/碎片4.html
+++ b/html/碎片4.html
@@ -8,7 +8,7 @@
   <title>碎片4</title>
  </head>
  <body>
-  <span id="anchor">20250601075301-碎片</span>
+  <span id="anchor">20250608204553-碎片</span>
   <pre>
 不仅生无知己, 即使死后也只有青蝇吊慰, 毕生落落寡合, 孤独无友
 
@@ -215,6 +215,30 @@
 
 不要因为睡懒觉而感到自责，因为你起来也创造不了什么价值。
 能从浪费时间中获得乐趣，就不是浪费时间。——罗素
+
+
+怒于室者色于市
+
+
+东汉末年，经学家郑玄一直有一项写作计划，那就是给《左传》作注，但是由于拖延症久治不愈，此计划进展缓慢，始终未能完成。
+有一次，郑玄外出，在旅店中偶遇了九江太守服子慎。当然，二人并不相识，郑玄在屋内，服子慎在屋外的车中，限于当时的隔音条件，郑玄清清楚楚的偷听了服子慎的高论。
+在车中，小服正在跟某人侃侃而谈自己最近的一部作品，正是给《左传》作的注，郑玄默默听了很久，发现其见解很多地方都与自己相同。这事要是搁在曹孟德身上，估计掏出书稿就扔火盆里了。可人家郑玄毕竟是大师，听罢起身，来到服子慎面前说：“我很久以来就想注《左传》了，没想到让你先给注了，那很好。你的很多见解与我相同，所以我打算把我已完成的部分赠送给你，帮助你更好的完成这项功课。”
+于是便有了流传至今的《服氏注》，也就是《春秋左氏解谊》三十一卷。
+所谓功成不必在我，这境界也真是没谁了。忽想起当年大神牛顿与大神莱布尼茨的关于“谁发明了微积分”的世纪大战，不觉莞尔一笑，你俩要是知道几百年后有多少大学生恨透了微积分这玩意，不知当初会不会稍微谦虚那么一点点呢。
+
+
+缸中之脑（英语：Brain in a vat），又称桶中之脑（brain in a jar），是知识论中的一个思想实验，由哲学家希拉里·普特南在《理性、真理和历史》（Reason, Truth, and History）[1]一书中提出。
+实验的基础是人所体验到的一切最终都要在大脑中转化为神经信号。假设一个疯子科学家、机器或其他任何意识将一个大脑从人体取出，放入一个装有营养液的缸里维持着它的生理活性，超级计算机通过神经末梢向大脑传递和原来一样的各种神经电信号，并对于大脑发出的信号给予和平时一样的信号反馈，则大脑所体验到的世界其实是计算机制造的一种模拟现实[2]，则此大脑能否意识到自己生活在虚拟现实之中？
+这个思想实验常被引用来论证一些哲学，如知识论、怀疑论、唯我论和主观唯心主义。一个简单的论证如下：因为缸中之脑和头颅中的大脑接收一模一样的信号，而且这是他唯一和环境交流的方式，从大脑中角度来说，它完全无法确定自己是颅中之脑还是缸中之脑。如果是前者，那它的想法是正确的，他确实走在大街上或者在划船。如果是后者，那它就是错误的，它并没有在走路或划船，只是接收到了相同的电信号而已。一个大脑无法知道自己是在颅中还是缸中，因此这世间的一切可能都是虚假的、虚妄的。那么什么是真实？
+从生物学的角度讲，个体对于客观存在的认知或判别取决于他所接收的刺激，假设缸中脑生成一系列“测试用”反应用于检测自身的认知，同时“系统”又能及时给予相应的刺激作为回应，此时问题的症结就不在于缸中脑对于世界的认知，而在于“观察者”自身对于世界的认知。自身存在的客观性被质疑，在一个完全由“刺激”创造的“意识世界”中将形成一个悖论。
+
+
+“设想一个人（你可以设想这正是阁下本人）被一位邪恶的科学家做了一次手术。此人的大脑（阁下的大脑）被从身体上截下并放入一个营养钵，以使之存活。神经末梢同一台超科学的计算机相连接，这台计算机使这个大脑的主人具有一切如常的幻觉。人群，物体，天空，等等，似乎都存在着，但实际上此人（即阁下）所经验到的一切都是从那架计算机传输到神经末梢的电子脉冲的结果。这台计算机十分聪明，此人若要抬起手来，计算机发出的反馈就会使他“看到”并“感到”手正被抬起。不仅如此，那位邪恶的科学家还可以通过变换程序使得受害者“经验到”（即幻觉到）这个邪恶科学家所希望的任何情境或环境。他还可以消除脑手术的痕迹，从而该受害者将觉得自己一直是处于这种环境的。这位受害者甚至还会以为他正坐着读书，读的就是这样一个有趣但荒唐至极的假定：一个邪恶的科学家把人脑从人体上截下并放入营养钵中使之存活。神经末梢据说接上了一台超科学的计算机，它使这个大脑的主人具有如此这般的幻觉……”（《理性、真理与历史》） 
+
+
+两千多年前，我国著名哲学家庄子就曾经思考过这个问题。我们都知道庄生梦蝶的故事，说的是庄子梦见自己变成了一只蝴蝶，翩翩起舞，醒来之后忍不住思考：到底自己是一个真实的人、梦见了变成蝴蝶，还是自己原本就是蝴蝶，作为人的感受才是梦境呢？
+到了17世纪，法国著名哲学家笛卡尔也开始思考这个问题。虽然他不知道神经元、电信号等等概念，但还是假设了一种魔鬼，可以为他虚幻出包括“天空、空气、土地、形状、色彩、声音”等一切在内的梦境，让他以为自己是活在现实世界中。他甚至还作出假设，自己可能“既没有双手，也没有双眼，也没有肉体，也没有血液，也没有一切的器官”，只是糊涂地“活着”。
+
 </pre>
  </body>
 </html>
