--- a/html/test.html
+++ b/html/test.html
@@ -4,7 +4,7 @@
   function openMarzipanoViewer() {
     var newWindow = window.open();
     var jsUrl = "https://futarinoida.github.io/js/marzipano.js";
-    var imagePath = "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjST0bY0lEtZIzkOYKcSdWhgfm1h7Ccw4VErufqXhbXkTHkQkrfza6AhV1RR1O7USe-8iHnJkl5DZuzA-Dk8YFCvaW4wKmGbuWM9FEbxPDxUMjQeSItyz1CavcEvkP1MFxZ42-p7WL6yAr46HJHzVWJTUdI-IEvICo8OSIa1ypbXswMLvfKJl144-W63-Wz/s8704/PXL_20250518_041401859.PHOTOSPHERE.jpg";
+    var imagePath = "https://renderstuff.com/assets/133/equirectangular-360-panorama-interior-rendering-by-3ds-max-and-v-ray.jpg";
 
     newWindow.document.write(
       '<!DOCTYPE html>' +
