--- a/html/test.html
+++ b/html/test.html
@@ -3,7 +3,7 @@
 <script>
   function openMarzipanoViewer() {
     var newWindow = window.open();
-    var jsUrl = "https://futarinoida.github.io/js/marzipano.js";
+    var jsUrl = "https://cdn.jsdelivr.net/npm/marzipano@0.10.2/dist/marzipano.min.js";
     var imagePath = "https://renderstuff.com/assets/133/equirectangular-360-panorama-interior-rendering-by-3ds-max-and-v-ray.jpg";
 
     newWindow.document.write(
