--- a/html/test.html
+++ b/html/test.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Marzipano 360 Viewer</title>
-  <script src="https://cdn.jsdelivr.net/npm/marzipano@0.10.2/dist/marzipano.min.js"></script>
-  <style>
-    html, body { height: 100%; margin: 0; }
-    #pano { width: 100%; height: 100%; }
-  </style>
-</head>
-<body>
-  <div id="pano"></div>
-  <script>
-    var viewer = new Marzipano.Viewer(document.getElementById("pano"));
-    var source = Marzipano.ImageUrlSource.fromString("https://pannellum.org/images/alma.jpg");
-    var geometry = new Marzipano.EquirectGeometry([{ width: 2048 }]);
-    var limiter = Marzipano.RectilinearView.limit.traditional(2048, 100 * Math.PI / 180);
-    var view = new Marzipano.RectilinearView(null, limiter);
-    var scene = viewer.createScene({ source: source, geometry: geometry, view: view, pinFirstLevel: true });
-    scene.switchTo();
-  </script>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Marzipano Test</title>
+    <script src="https://cdn.jsdelivr.net/npm/marzipano@0.10.2/dist/marzipano.min.js"></script>
+    <style>
+      html, body { margin: 0; height: 100%; }
+      #pano { width: 100%; height: 100%; }
+    </style>
+  </head>
+  <body>
+    <div id="pano"></div>
+    <script>
+      var viewer = new Marzipano.Viewer(document.getElementById("pano"));
+      var source = Marzipano.ImageUrlSource.fromString("https://pannellum.org/images/alma.jpg");
+      var geometry = new Marzipano.EquirectGeometry([{ width: 2048 }]);
+      var limiter = Marzipano.RectilinearView.limit.traditional(2048, 100 * Math.PI / 180);
+      var view = new Marzipano.RectilinearView(null, limiter);
+      var scene = viewer.createScene({
+        source: source,
+        geometry: geometry,
+        view: view,
+        pinFirstLevel: true
+      });
+      scene.switchTo();
+    </script>
+  </body>
 </html>
